# buchhaltung

./: .gitignore  .travis.yml  LICENSE  README.md  Setup.hs  add.md  buchhaltung.cabal  buchhaltung.sh  buchhaltung_autocomplete.bash  buchhaltung_autocomplete.zsh  config.yml  default.nix  match.md  release.nix  shell.nix  stack.yaml
example_input/: barclaycardus.csv  config_nick.yml
example_output/: add.md  add_multi_user.md  match.md
examples_configurations/nick/: config.yml  pnc.csv
examples_configurations/nick/nick/: import.ledger
exchange_rates/: btc_eur
src/: main.hs
src/Buchhaltung/: AQBanking.hs  Add.hs  Ask.hs  Commandline.hs  Common.hs  Import.hs  Importers.hs  Match.hs  OptionParsers.hs  Types.hs  Uniques.hs  Utils.hs  ZipEdit2.hs  Zipper.hs
