name:           buchhaltung
version:        0.0.1
Bug-Reports:      http://github.com/johannesgerer/buchhaltung/issues
License:          MIT
License-file:     LICENSE
Author:           Johannes Gerer
Maintainer:       Johannes Gerer <oss@johannesgerer.com>
Homepage:         http://johannesgerer.com/buchhaltung
Stability:        Experimental
category:       Finance
synopsis:      Automates most of your plain text accounting data entry in ledger format.
description:
   Automatic import and deduplication (from CSV\/FinTS\/HBCI\/OFX), bayesian account matching, and efficient manual entry of <http://plaintextaccounting.org/ ledger> transactions.

   .
   See <https://github.com/johannesgerer/buchhaltung Readme> on Github.

tested-with:    GHC == 7.10.1
cabal-version:  >= 1.10
build-type:     Custom


executable buchhaltung
  Hs-Source-Dirs:   src
  main-is:          main.hs
  other-modules: Buchhaltung.Add
                 Buchhaltung.AQBanking
                 Buchhaltung.Ask
                 Buchhaltung.Common
                 Buchhaltung.Import
                 Buchhaltung.Importers
                 Buchhaltung.Match
                 Buchhaltung.Commandline
                 Buchhaltung.OptionParsers
                 Buchhaltung.Types
                 Buchhaltung.Uniques
                 Buchhaltung.Utils
                 Buchhaltung.ZipEdit2
                 Buchhaltung.Zipper
  default-language: Haskell2010
  ghc-options:     -threaded
  build-depends:
                      Decimal >= 0.4.2
                , ListLike
                , ListZipper
                , MissingH
                , aeson >= 1.0.0
                , ansi-wl-pprint
                , array
                , async
                , base
                , boxes
                , bytestring
                , lens
                , cassava >= 0.4.1.0
                , containers
                , data-default
                , deepseq
                , directory
                , edit-distance
                , file-embed
                , filepath
                , formatting
                , hashable
                , haskeline
                , hint
                , hledger >= 1.0.0
                , hledger-lib >= 1.0.0
                , lifted-base
                , megaparsec >= 5.0.0
                , monad-control 
                , mtl
                , optparse-applicative
                , parsec
                , process >= 1.1.0.2
                , regex-compat
                , regex-tdfa
                , regex-tdfa-text
                , safe
                , semigroups
                , split
                , strict
                , temporary
                , text
                , time
                , transformers
                , unordered-containers
                , vector
                , yaml
