name:           buchhaltung
version:        0.0.6
Bug-Reports:      http://github.com/johannesgerer/buchhaltung/issues
License:          MIT
License-file:     LICENSE
Author:           Johannes Gerer
Maintainer:       Johannes Gerer <oss@johannesgerer.com>
Homepage:         http://johannesgerer.com/buchhaltung
Stability:        Experimental
category:       Finance
synopsis:      Automates most of your plain text accounting data entry in ledger format.
description:
   Automatic import and deduplication (from CSV\/FinTS\/HBCI\/OFX), bayesian account matching, and efficient manual entry of <http://plaintextaccounting.org/ ledger> transactions.

   .
   See <https://github.com/johannesgerer/buchhaltung Readme> on Github.

tested-with:    GHC == 7.10.1
cabal-version:  >= 1.10
build-type:     Simple

Extra-source-files:
                   README.md
                   example_output/add.md
                   example_output/add_multi_user.md
                   example_output/match.md
                   stack.yaml
                   config.yml
                   buchhaltung_autocomplete.bash
                   buchhaltung_autocomplete.zsh
                   exchange_rates/btc_eur

library
  Hs-Source-Dirs:   src
  exposed-modules: Buchhaltung.Add
                 Buchhaltung.AQBanking
                 Buchhaltung.Ask
                 Buchhaltung.Common
                 Buchhaltung.Import
                 Buchhaltung.Importers
                 Buchhaltung.Match
                 Buchhaltung.Commandline
                 Buchhaltung.OptionParsers
                 Buchhaltung.Types
                 Buchhaltung.Uniques
                 Buchhaltung.Utils
                 Buchhaltung.ZipEdit2
                 Buchhaltung.Zipper
  default-language: Haskell2010
  build-depends:
                  Decimal >= 0.4.2
                , ListLike
                , MissingH
                , aeson >= 1.0.0
                , ansi-wl-pprint
                , array
                , async
                , base >= 4.0.0.0 && < 5
                , boxes
                , bytestring
                , lens
                , cassava >= 0.4.1.0
                , containers
                , data-default
                , deepseq
                , directory
                , edit-distance
                , file-embed
                , filepath
                , formatting
                , hashable
                , haskeline
                , hint
                , hledger >= 1.1
                , hledger-lib >= 1.1
                , lifted-base
                , megaparsec >= 5.0.0
                , monad-control
                , mtl
                , optparse-applicative >= 0.13
                , parsec
                , process >= 1.1.0.2
                , regex-compat
                , regex-tdfa
                , regex-tdfa-text
                , safe
                , semigroups
                , split
                , strict
                , temporary
                , text
                , time
                , transformers
                , unordered-containers
                , vector
                , yaml

executable buchhaltung
  Hs-Source-Dirs:   src
  main-is:          main.hs
  other-modules: Buchhaltung.Add
                 Buchhaltung.AQBanking
                 Buchhaltung.Ask
                 Buchhaltung.Common
                 Buchhaltung.Import
                 Buchhaltung.Importers
                 Buchhaltung.Match
                 Buchhaltung.Commandline
                 Buchhaltung.OptionParsers
                 Buchhaltung.Types
                 Buchhaltung.Uniques
                 Buchhaltung.Utils
                 Buchhaltung.ZipEdit2
                 Buchhaltung.Zipper
  default-language: Haskell2010
  ghc-options:     -threaded
                   -fwarn-unused-binds
                   -fwarn-unused-matches
                   -fwarn-incomplete-patterns
  build-depends:
                  Decimal >= 0.4.2
                , ListLike
                , MissingH
                , aeson >= 1.0.0
                , ansi-wl-pprint
                , array
                , async
                , base >= 4.0.0.0 && < 5
                , boxes
                , bytestring
                , lens
                , cassava >= 0.4.1.0
                , containers
                , data-default
                , deepseq
                , directory
                , edit-distance
                , file-embed
                , filepath
                , formatting
                , hashable
                , haskeline
                , hint
                , hledger >= 1.1
                , hledger-lib >= 1.1
                , lifted-base
                , megaparsec >= 5.0.0
                , monad-control
                , mtl
                , optparse-applicative >= 0.13
                , parsec
                , process >= 1.1.0.2
                , regex-compat
                , regex-tdfa
                , regex-tdfa-text
                , safe
                , semigroups
                , split
                , strict
                , temporary
                , text
                , time
                , transformers
                , unordered-containers
                , vector
                , yaml


Source-repository head
  Type:     git
  Location: http://github.com/johannesgerer/buchhaltung